# SchmixEngine

./: .gitignore  Shader.frag
Engine/: CMakeLists.txt  GenerateCmake-Debug.bat  GenerateCmake-Release.bat
Engine/Source/: CMakeLists.txt  Test.cpp
Engine/Source/SchmixEngine/Core/: CMakeLists.txt
Engine/Source/SchmixEngine/Core/Application/: Application.cpp  Application.h  SubSystem.cpp  SubSystem.h  SubSystemManager.cpp  SubSystemManager.h  SubSystemThread.cpp  SubSystemThread.h  SubSystemThreadManager.cpp  SubSystemThreadManager.h
Engine/Source/SchmixEngine/Core/Debugging/: ConsoleLogger.cpp  ConsoleLogger.h  Debug.h  Logger.cpp  Logger.h
Engine/Source/SchmixEngine/Core/FileSystem/: VFSDiskDrive.cpp  VFSDiskDrive.h  VFSDiskFile.cpp  VFSDiskFile.h  VFSDrive.h  VFSFile.h  VFSMountPoint.cpp  VFSMountPoint.h  VirtualFileSystem.cpp  VirtualFileSystem.h
Engine/Source/SchmixEngine/Core/GameFramework/: GameState.cpp  GameState.h  GameStateManager.cpp  GameStateManager.h  GameSubSystem.cpp  GameSubSystem.h
Engine/Source/SchmixEngine/Core/Graphics/Core/: Buffer.cpp  Buffer.h  GraphicsAPI.h  GraphicsPipeline.cpp  GraphicsPipeline.h  ShaderData.h  Texture.cpp  Texture.h
Engine/Source/SchmixEngine/Core/Graphics/Renderer/: ForwardRenderSubSystem.h  ForwardRenderSubSystem.inl  GraphicsAPIAgnosticRenderSubSystem.h  GraphicsAPIAgnosticRenderSubSystem.inl  Material.cpp  Material.h  RenderLayer.cpp  RenderLayer.h  RenderSubSystem - Copy.cpp  RenderSubSystem - Copy.h  RenderSubSystem.cpp  RenderSubSystem.h  SchmixEngineRenderSubSystemBase.h  SchmixEngineRenderSubSystemBase.inl
Engine/Source/SchmixEngine/Core/Graphics/Util/: Camera.cpp  Camera.h  GraphicsUtil.cpp  GraphicsUtil.h  MemoryManager.cpp  MemoryManager.h  Vertex2D.h  Vertex3D.h
Engine/Source/SchmixEngine/Core/Input/: BaseInputSubSystem.cpp  BaseInputSubSystem.h  InputMappingResolver.cpp  InputMappingResolver.h  InputSubSystem.h  InputSubSystem.inl  Mappings.cpp  Mappings.h
Engine/Source/SchmixEngine/Core/Reflection/: ClassDB_CT.h  ClassInfo.cpp  ClassInfo.h  Data.h  Data.inl  InheritanceTreeNode.cpp  InheritanceTreeNode.h  Macros.h  Object.cpp  Object.h  PrimitiveObject.h  PrimitiveObject.inl  Primitives.inl  Property.h  ReflectionUtil.h  ReflectionUtil.inl  TypeDB.h  TypeInfo.cpp  TypeInfo.h  Value.h  Value.inl
Engine/Source/SchmixEngine/Core/Util/: FlatMap.h  FlatMap.inl  JSONUtil.h  JSONUtil.inl  Util.cpp  Util.h
Engine/Source/SchmixEngine/OpenGL/: CMakeLists.txt  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLGraphicsAPI.h  OpenGLGraphicsAPI.inl  OpenGLGraphicsAPIFlavour.cpp  OpenGLGraphicsAPIFlavour.h  OpenGLGraphicsPipeline.cpp  OpenGLGraphicsPipeline.h  OpenGLTexture.cpp  OpenGLTexture.h  STD140ShaderData.cpp  STD140ShaderData.h
Engine/Source/SchmixEngine/SDL2/Input/: CMakeLists.txt  SDL2InputMappingResolver.cpp  SDL2InputMappingResolver.h  SDLGamepadWrapper.cpp  SDLGamepadWrapper.h
Engine/Source/SchmixEngine/SDL2/OpenGL/: CMakeLists.txt  SDL2OpenGLGraphicsAPIFlavour.cpp  SDL2OpenGLGraphicsAPIFlavour.h
Tools/SchmixEngineHeaderTool/: CHANGELOG.md  README.md  SchmixEngineHeaderTool.cabal  package.yaml
Tools/SchmixEngineHeaderTool/Source/Reflection/: CMakeLists.txt  Variable.h
Tools/SchmixEngineHeaderTool/app/: Main.hs
Tools/SchmixEngineHeaderTool/src/: CodeGen.hs  Config.hs  Constants.hs  Lexer.hs  Parser.hs  Types.hs  Util.hs
Tools/SchmixEngineHeaderTool/test/: LineSplicingTest.h
