cmake_minimum_required(VERSION 3.20)

project("SchmixEngine")

set(SCHMIX_ENGINE_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/Source")
set(SCHMIX_ENGINE_INSTALL_LIB_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Lib/${CMAKE_SYSTEM_NAME}/${CMAKE_CXX_COMPILER_ID}/${CMAKE_BUILD_TYPE})
set(SCHMIX_ENGINE_INSTALL_BIN_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Bin/${CMAKE_SYSTEM_NAME}/${CMAKE_CXX_COMPILER_ID}/${CMAKE_BUILD_TYPE})

include_directories(${SCHMIX_ENGINE_ROOT})

add_subdirectory("Source/SchmixEngine/Core")
add_subdirectory("Source/SchmixEngine/OpenGL")
add_subdirectory("Source/SchmixEngine/SDL2/OpenGL")
add_subdirectory("Source/SchmixEngine/SDL2/Input")

add_library(${CMAKE_PROJECT_NAME} INTERFACE)

target_link_libraries("${CMAKE_PROJECT_NAME}" INTERFACE
	"${CMAKE_PROJECT_NAME}-Core" 
	"${CMAKE_PROJECT_NAME}-SDL2_OpenGL"
	"${CMAKE_PROJECT_NAME}-SDL2_Input"
	)

install(TARGETS "${CMAKE_PROJECT_NAME}" EXPORT ${CMAKE_PROJECT_NAME}
    ARCHIVE DESTINATION ${SCHMIX_ENGINE_INSTALL_LIB_DIR}
    LIBRARY DESTINATION ${SCHMIX_ENGINE_INSTALL_LIB_DIR}
    RUNTIME DESTINATION ${SCHMIX_ENGINE_INSTALL_BIN_DIR}
)

install(EXPORT ${CMAKE_PROJECT_NAME} 
	DESTINATION ${SCHMIX_ENGINE_INSTALL_LIB_DIR}
    FILE "${CMAKE_PROJECT_NAME}.cmake"
)

#add_executable(${CMAKE_PROJECT_NAME} "Test.cpp")
#target_link_libraries(${CMAKE_PROJECT_NAME} "${CMAKE_PROJECT_NAME}-Core" "${CMAKE_PROJECT_NAME}-SDL2_OpenGL" "${CMAKE_PROJECT_NAME}-SDL2_Input")

#set_target_properties(${CMAKE_PROJECT_NAME} PROPERTIES
#					LINKER_LANGUAGE CXX
#					CXX_STANDARD 17
#					CXX_EXTENSIONS OFF
#					CXX_STANDARD_REQUIRED ON
#					)