cmake_minimum_required(VERSION 3.20)

file(GLOB Src "*.h" "*.inl" "*.cpp")

add_library("${CMAKE_PROJECT_NAME}-SDL2_Input" ${Src})

target_link_libraries("${CMAKE_PROJECT_NAME}-SDL2_Input" 
	"${CMAKE_PROJECT_NAME}-Core" 
	"${SCHMIX_ENGINE_ROOT}/SchmixEngine/ThirdParty/SDL2/lib/x64/SDL2.lib"
	"${SCHMIX_ENGINE_ROOT}/SchmixEngine/ThirdParty/SDL2/lib/x64/SDL2Main.lib"
)

set_target_properties("${CMAKE_PROJECT_NAME}-SDL2_Input" PROPERTIES
    LINKER_LANGUAGE CXX
    CXX_STANDARD 17
    CXX_EXTENSIONS OFF
    CXX_STANDARD_REQUIRED ON
)

install(TARGETS "${CMAKE_PROJECT_NAME}-SDL2_Input" EXPORT ${CMAKE_PROJECT_NAME}
    ARCHIVE DESTINATION ${SCHMIX_ENGINE_INSTALL_LIB_DIR}
    LIBRARY DESTINATION ${SCHMIX_ENGINE_INSTALL_LIB_DIR}
    RUNTIME DESTINATION ${SCHMIX_ENGINE_INSTALL_BIN_DIR}
)